examples/test/testpolicy4402.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4402
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key7: value39
      key49: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value28
      podSelector:
        matchLabels:
          key35: value2
          key38: value42
          key8: value26
